# aerofin

./: .readthedocs.yaml  README.md
.github/workflows/: github-actions-docs.yaml  github-actions-lib-pybov.yaml
dev/: README.md  docker-compose.yaml
dev/volumes/kafka-broker/: server.properties
dev/volumes/zookeeper/: log4j.properties  zoo.cfg
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  introduction.rst
docs/source/projects/: index.rst  pybov.rst
images/: README.md
images/kafka/: Makefile
images/zookeeper/: Makefile
src/: README.md
src/pybov/: Makefile  REAME.md  pyproject.toml
src/pybov/src/pybov/: cli.py  errors.py  helpers.py  types.py
src/pybov/test/: conftest.py  test_cli_version.py  test_pybov.py  test_types.py
