[tool.poetry]
name = "pybov"
version = "0.0.1"
description = "ibovespa (b3) python library"
authors = ["odra <me@lrossetti.com>"]
license = "Apache-2.0"
packages = [
    { include="pybov", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
click = "^8.1.3"
canonicaljson = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pybov = "pybov.cli:run"
